--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ h1
 
 ul
 {
-    list-style-image: url();
+    list-style-image: url('http://www.dharohar.in/wp-content/uploads/2014/10/diya.png');
 }
+
+
 
