--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1
 
 ul
 {
-    list-style-image: url('http://www.dharohar.in/wp-content/uploads/2014/10/diya.png');
+    list-style-image: url('https://www.dharohar.in/wp-content/uploads/2014/10/diya.png');
 }
 
 
