--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1
 
 ul
 {
-    list-style-image: url('https://www.dharohar.in/wp-content/uploads/2014/10/diya.png');
+    list-style-image: url('https://png.pngtree.com/png-clipart/20230213/ourmid/pngtree-colorful-diwali-diya-concept-png-image_6596176.png');
 }
 
 
