--- a/style.css
+++ b/style.css
@@ -55,9 +55,9 @@ li
 .buttons span
 {
     color: #fbfbfb;
-    margin-top: 150px;
+    margin-top: 130px;
     position: absolute; 
-    margin-right: 0;
+    margin-left: -130px;
 }
 
 .container
